--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:background="@drawable/shadow_rectangle"
+    android:background="@drawable/shadow_rectangle" android:orientation="vertical">
+<RelativeLayout
+    android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:padding="@dimen/default_spacing"
     >
 
     <ImageView
@@ -23,7 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:textSize="@dimen/news_title_fontSize"
-        android:textColor="@color/titleFontColor"
+        android:textColor="@color/colorPrimary"
         android:layout_marginStart="5dp"
         android:ems="10" />
     <TextView
@@ -39,3 +43,25 @@
         android:ems="10" />
 
 </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp" android:background="@color/authui_colorPrimary" android:layout_margin="@dimen/default_spacing" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/default_spacing"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:textSize="18dp" android:textColor="@color/heartColor" android:text="0"
+            android:drawableStart="@drawable/heart_filled"
+            android:layout_alignParentStart="true"
+            tools:ignore="HardcodedText" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:textSize="18dp" android:textColor="@color/commentColor" android:text="0"
+            tools:ignore="HardcodedText"
+            android:layout_centerInParent="true" android:drawableStart="@drawable/comments_filled"
+            />
+    </RelativeLayout>
+</LinearLayout>
