--- a/app/src/main/res/layout/fragment_news_details.xml
+++ b/app/src/main/res/layout/fragment_news_details.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="com.kareem.newme.News.NewsDetailsFragment"
     android:padding="@dimen/default_spacing"
     tools:showIn="@layout/activity_news_details">
@@ -28,9 +28,10 @@
                 android:id="@+id/send_button" android:contentDescription="@string/button_text_send"/>
 
     </LinearLayout>
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/news_details_listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" android:id="@+id/news_details_listView"
+        android:layout_height="match_parent"
         android:layout_above="@id/comments_writer_holder"
-        />
+        app:layoutManager="LinearLayoutManager" />
 </RelativeLayout>
