--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -7,10 +7,28 @@
         android:layout_height="match_parent"
         tools:context="com.kareem.newme.homePage.HomePageFragment"
         android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
             <com.daimajia.slider.library.SliderLayout
             android:id="@+id/slider"
             android:layout_width="match_parent"
-            android:layout_height="230dp" />
+            android:layout_height="match_parent" />
+        <RelativeLayout
+            android:layout_width="match_parent" android:layout_centerInParent="true" android:orientation="vertical" android:background="#5000"
+            android:layout_height="match_parent">
+            <TextView
+            android:layout_width="wrap_content" android:textColor="@color/secondaryTextColor"
+            android:layout_height="wrap_content"
+                android:id="@+id/home_slider_title"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:textAlignment="center" android:layout_centerInParent="true" />
+            <TextView
+                android:layout_width="wrap_content" android:layout_centerHorizontal="true" android:layout_below="@id/home_slider_title"
+                android:layout_height="wrap_content" android:id="@+id/home_slider_description" android:textColor="@color/secondaryTextColor" android:textAlignment="center" />
+        </RelativeLayout>
+    </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:orientation="horizontal">
