--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -45,25 +45,38 @@
 </RelativeLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp" android:background="@color/authui_colorPrimary" android:layout_margin="@dimen/default_spacing" />
+        android:layout_height="1px" android:background="#999" android:layout_margin="@dimen/default_spacing" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/default_spacing"
         >
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:textSize="18dp" android:textColor="@color/heartColor" android:text="0"
-            android:drawableStart="@drawable/heart_filled"
-            android:layout_alignParentStart="true"
-            android:id="@+id/likes_count_news_list"
-            tools:ignore="HardcodedText" />
-        <TextView
+            android:layout_height="wrap_content" android:layout_alignParentStart="true" android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp" android:src="@drawable/heart_filled" />
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:textSize="18dp" android:textColor="@color/heartColor" android:text="0"
+
+                android:id="@+id/likes_count_news_list"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:textSize="18dp" android:textColor="@color/commentColor" android:text="0"
-            tools:ignore="HardcodedText"
-            android:layout_centerInParent="true" android:drawableStart="@drawable/comments_filled"
-            android:id="@+id/comments_count_news_list"
-            />
+            android:layout_height="wrap_content"  android:layout_centerInParent="true" android:orientation="horizontal">
+            <ImageView
+                android:layout_width="18dp"
+                android:layout_height="18dp" android:src="@drawable/comments_filled" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:textSize="18dp" android:textColor="@color/commentColor" android:text="0"
+                tools:ignore="HardcodedText"
+                android:id="@+id/comments_count_news_list"
+                />
+        </LinearLayout>
+
     </RelativeLayout>
 </LinearLayout>
