--- a/app/src/main/res/layout/message_list_item_active.xml
+++ b/app/src/main/res/layout/message_list_item_active.xml
@@ -6,17 +6,33 @@
     android:orientation="horizontal"
     android:layout_margin="@dimen/default_spacing"
     >
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/active_user"
+        app:civ_border_width="1px"
+        app:civ_border_color="#FF000000"/>
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="35dp" android:src="@drawable/left_gray_arrow"
+        android:scaleType="fitXY"
+        android:id="@+id/imageView2"
+        android:layout_alignBottom="@+id/profile_image"
+        android:layout_toEndOf="@+id/profile_image" />
     <TextView
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/list_item_default_padding"
         android:paddingBottom="@dimen/list_item_default_padding"
         android:background="@drawable/rounded_button_gray"
-        android:layout_alignParentStart="true"
-        />
+        android:layout_marginLeft="-20dp"
+        android:layout_marginRight="@dimen/text_margin"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/imageView2" />
 </RelativeLayout>
