--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -51,32 +51,33 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/default_spacing"
         >
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_alignParentStart="true" android:orientation="horizontal">
+            android:layout_height="wrap_content" android:layout_alignParentStart="true">
                 <ImageView
-                    android:layout_width="18dp"
-                    android:layout_height="18dp" android:src="@drawable/heart_filled" />
+                    android:layout_width="18dp" android:id="@+id/myIcon"
+                    android:layout_height="18dp" android:src="@drawable/heart_filled" android:layout_centerVertical="true"/>
                 <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:textSize="18dp" android:textColor="@color/heartColor" android:text="0"
-
-                android:id="@+id/likes_count_news_list"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content" android:textSize="18sp" android:textColor="@color/heartColor" android:text="0"
+                    android:layout_toEndOf="@id/myIcon"
+                android:id="@+id/likes_count_news_list" android:layout_centerVertical="true"
                 tools:ignore="HardcodedText" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"  android:layout_centerInParent="true" android:orientation="horizontal">
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"  android:layout_centerInParent="true">
             <ImageView
-                android:layout_width="18dp"
-                android:layout_height="18dp" android:src="@drawable/comments_filled" />
+                android:layout_width="18dp" android:id="@id/myIcon"
+                android:layout_height="18dp" android:src="@drawable/comments_filled" android:layout_centerInParent="true" />
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:textSize="18dp" android:textColor="@color/commentColor" android:text="0"
+                android:layout_height="wrap_content" android:layout_centerVertical="true" android:textSize="18sp" android:textColor="@color/commentColor" android:text="0"
                 tools:ignore="HardcodedText"
                 android:id="@+id/comments_count_news_list"
+                android:layout_toEndOf="@id/myIcon"
                 />
-        </LinearLayout>
+        </RelativeLayout>
 
     </RelativeLayout>
 </LinearLayout>
