--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/lightGrey" android:layout_margin="@dimen/default_spacing"
+    android:background="@color/lightGrey"
     android:layout_height="match_parent">
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" android:id="@+id/news_container_listView"/>
+        android:layout_height="match_parent" android:id="@+id/news_container_listView" android:divider="@android:color/transparent"
+        android:dividerHeight="5dp"/>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
