--- a/app/src/main/res/layout/news_details_list_item_admin.xml
+++ b/app/src/main/res/layout/news_details_list_item_admin.xml
@@ -54,7 +54,7 @@
         </RelativeLayout>
 
         <Spinner
-            android:layout_width="wrap_content" android:id="@+id/action_spinner" android:visibility="gone"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:layout_alignParentEnd="true" android:prompt="@string/action"  />
     </RelativeLayout>
 
