--- a/app/src/main/res/layout/message_list_item_remote.xml
+++ b/app/src/main/res/layout/message_list_item_remote.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_margin="@dimen/default_spacing"
+    android:layoutDirection="ltr"
     >
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
