--- a/app/src/main/res/layout/fragment_faq_list.xml
+++ b/app/src/main/res/layout/fragment_faq_list.xml
@@ -5,6 +5,7 @@
     android:name="com.kareem.newme.FAQ.FAQFragment"
     android:layout_width="match_parent"
     tools:context="com.kareem.newme.FAQ.FAQFragment"
+    android:padding="@dimen/default_spacing"
     android:layout_height="match_parent">
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
