--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -56,7 +56,7 @@
             android:drawableStart="@drawable/user"
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
-            android:hint="@string/name_hint"
+            android:hint="@string/full_name"
             android:inputType="textCapWords"
             android:padding="10dp"
             android:singleLine="true"
