--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
-        android:text="@string/anonymous"
+        android:text="@string/guest"
         android:textSize="@dimen/nav_header_fontSize"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
