--- a/app/src/main/res/layout/custom_toast_successful.xml
+++ b/app/src/main/res/layout/custom_toast_successful.xml
@@ -11,11 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:drawableLeft="@drawable/error"
+        android:drawableEnd="@drawable/success"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
         android:padding="5dp"
-        android:textColor="#c0392b"
+        android:textColor="#2ecc71"
         android:textSize="15sp" />
 
 </RelativeLayout>
